--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,13 +16,25 @@ header img {
   width: 10%;
 }
 
+.dropdown-toggle:hover {
+  background-color: rgb(48, 45, 45);
+}
+
+#nav a {
+  text-decoration: none;
+  color: white;
+  border: 1px solid white;
+  padding: 2px;
+}
+
 .addToCart {
   position: absolute;
   right: 10px;
   top: 10px;
 }
 
-.addToCart:hover {
+.addToCart:hover,
+#addToCart:hover {
   transform: scale(1.1);
   background-color: #ffc107 !important;
   color: black !important;
